Issue 698 HDFS save returns result message dataset, instead of the source dataset (#699)
* add CustomDataset object & test, set bloom create and update to return status dataset instead of the whole dataset.

* apply spotless

* add isStreaming(boolean) option for CustomDataset.

* separate makeRowsList and makeRowsSeq into Rows object & tests.

* change Bloom filter result to contain _time column and also switch result column to _raw.

* remove null sparksession from CustomDatasetTest.testEqualsContract

* remove double call to collectAsList() in CustomDatasetTest.testCreateStreamingDataset

* add CustomDataset interface, rename CustomDataset -> CustomDatasetImpl, remove isStreaming ctor arg, this is now handled by CustomResultStep object instead. Result dataset is now created in a separate CustomResultStep, which is added after bloom create and update.

* removed unused variables from TeragrepBloomStep

* add custom result for hdfs save

* fix teragrepTest failing

* fix aggregate and join tests failing

* spotless

* remove possibly unnecessary DataStreamWriter from CustomDatasetImpl